Cost Breakdown Structure

--- a/docs/engx/0. Foreword.md
+++ b/docs/engx/0. Foreword.md
@@ -49,7 +49,12 @@ tags: [EngX]
       - [WBS in Agile project management](#wbs-in-agile-project-management)
     - [Checklists](#checklists)
     - [Others planning tools](#others-planning-tools)
-  - [to-do](#to-do)
+  - [Cost Breakdown Structure](#cost-breakdown-structure)
+    - [Project cost estimation](#project-cost-estimation)
+    - [Project estimate](#project-estimate)
+    - [Project сost breakdown structure (CBS)](#project-сost-breakdown-structure-cbs)
+    - [Types of Project Costs](#types-of-project-costs)
+    - [Project Cost Estimation Techniques](#project-cost-estimation-techniques)
 <!-- TOC -->
 ## Standards for systems and software engineering
 
@@ -809,10 +814,54 @@ So in this sense, a work breakdown structure is the equivalent of the product ba
 
 `Чем проще, тем лучше, но окончательный выбор делает PM (project manager).`
 
-## to-do
+## Cost Breakdown Structure
 
-Use Case
+### Project cost estimation
 
-Functional Decomposition
+Project cost estimation is the process that takes direct costs, indirect costs and other types of project costs into account and calculates a budget that meets the financial commitment necessary for a successful project. To do this, project managers and project estimators use a cost breakdown structure to determine all the costs in a project.
 
-Design First \ Contract First
+Оценка стоимости проекта — это процесс, который учитывает прямые затраты, косвенные затраты и другие виды затрат на проект и рассчитывает бюджет, соответствующий финансовым обязательствам, необходимым для успешного проекта. Для этого используют структуру разбивки затрат, чтобы определить все затраты в проекте.
+
+Project cost estimation is critical for any type of project. Everything costs money, so the clearer you are on the amount required, the more likely you and your project team will achieve your objective.
+
+Оценка стоимости проекта имеет решающее значение для любого типа проекта. Все стоит денег, поэтому чем яснее вы определите требуемую сумму, тем больше вероятность, что команда достигнет своей цели.
+
+### Project estimate
+
+A project estimate is the process of forecasting the time, cost and resources required for a project.
+
+Оценка проекта — это процесс точного прогнозирования времени, затрат и ресурсов, необходимых для проекта.
+
+To create a project estimate, you should first define your project scope and then create a project cost breakdown structure, which allows you to pinpoint all of your different project costs for each stage of the project life cycle.
+
+Чтобы оценить проект, вам следует сначала определить объем проекта, а затем создать структуру разбивки стоимости проекта, которая позволит вам точно определить все различные затраты по проекту для каждого этапа жизненного цикла проекта.
+
+### Project сost breakdown structure (CBS)
+
+A cost breakdown structure (CBS) is a very important project costing tool that details the individual costs of a project on a document. Similar to a work breakdown structure (WBS), it’s a hierarchical chart where each row represents a type of cost or item. This is done at the task level, which is called a bottom-up analysis.
+
+Структура разбивки затрат (CBS) — это очень важный инструмент расчета стоимости проекта, который подробно описывает отдельные затраты проекта в документе. Подобно иерархической структуре работ (WBS), это иерархическая диаграмма, где каждая строка представляет тип затрат или позиций.
+
+Using a cost breakdown structure is an essential part of project cost management and resource management. By zeroing in on costs at the task level early during the project planning phase, you’re less likely to miss hidden costs that could come up later during the project execution stage and throw your project budget off.
+
+Использование структуры разбивки затрат является важной частью управления стоимостью проекта и управления ресурсами. Сосредотачивая внимание на затратах на уровне задач на раннем этапе планирования проекта, вы с меньшей вероятностью пропустите скрытые затраты, которые могут возникнуть позже, на этапе реализации проекта.
+
+### Types of Project Costs
+
+There are five main types of costs that make up your total project cost. Here’s a quick overview of these types of project costs and how to measure them.
+
+- Direct costs: Direct costs are those that occur in a project and are attached to specific activities. These are generally costs that are easier to accurately estimate. They include raw materials, labor, supplies, etc. - Прямые затраты — это затраты, которые возникают в проекте и связаны с конкретными видами деятельности. Обычно это затраты, которые легче точно оценить. К ним относятся сырье, рабочая сила, материалы и т. д.
+- Indirect costs: Indirect costs in a project are those that are in support of the project, such as administrative fees. These can include everything from rent to salaries of the administrative staff to utilities, etc. - Косвенные затраты в проекте — это затраты, которые необходимы для поддержки проекта.
+- Fixed costs: Fixed costs, as the name suggests, are those that don’t change throughout the life cycle of a project. Some examples of fixed costs include setup costs, rental costs, insurance premiums, property taxes, etc. - Постоянные затраты, как следует из названия, — это затраты, которые не меняются на протяжении жизненного цикла проекта.
+- Variable costs: Variable costs are costs that change due to the amount of work that’s done in the project and are variable in nature. These costs can include hourly labor wages, materials, fuel costs and so on. - Переменные затраты — это затраты, которые изменяются в зависимости от объема работы, выполненной в проекте, и носят переменный характер.
+- Sunk costs: In project cost estimating, when an investment has already been incurred and can’t be recovered it’s called a sunk cost or retrospective cost. Some examples of sunk costs include marketing, research, installation of new software, etc. - Невозвратные потери - инвестиции уже были произведены и не могут быть возмещены.
+
+### Project Cost Estimation Techniques
+
+Estimation techniques:
+
+- Analogous Estimating - Seek the help of experts who have experience in similar projects, or use your own historical data. If you have access to relevant historical data, try analogous estimating, which can show precedents that help define what your future costs will be in the early stages of the project.
+- Parametric Estimating - There’s statistical modeling or parametric estimating, another cost estimation method that also uses historical data of key cost drivers and then calculates what those costs would be if the duration or another of the project is changed.
+- Bottom-Up Estimating - A more granular approach is bottom-up estimating, which uses estimates of individual tasks and then adds those up to determine the overall cost of the project. This cost-estimating method is even more detailed than parametric estimating and is used in complex projects with many variables such as software development or construction projects.
+- Three-Point Estimate - Another approach is the three-point estimate, which comes up with three scenarios: most likely, optimistic and pessimistic ranges. These are then put into an equation to develop an estimation.
+- Reserve Analysis - Reserve analysis determines how much contingency reserve must be allocated. This cost estimation method tries to wrangle uncertainty.
