Technical debt changed.

--- a/docs/engx/2. Development.md
+++ b/docs/engx/2. Development.md
@@ -54,6 +54,7 @@ tags: [EngX]
     - [Best Practices for Knowledge Sharing](#best-practices-for-knowledge-sharing)
   - [Technical Debt](#technical-debt)
     - [Reasons for Technical Debt](#reasons-for-technical-debt)
+    - [Benefits of Intentional Technical Debt](#benefits-of-intentional-technical-debt)
     - [Technical Debt Indicators](#technical-debt-indicators)
       - [Delivery Indicators](#delivery-indicators)
     - [Tracking Technical Debt](#tracking-technical-debt)
@@ -844,6 +845,35 @@ Below are some common reasons why a team might intentionally incur technical deb
 
 Ниже приведены некоторые распространенные причины, по которым команда может намеренно создавать технические долги.
 
+- Due to time limitations or other factors, your team might decide to knowingly violate code design principles by creating code with low cohesion, tightly coupled components, and other drawbacks. These actions may be necessary to keep the project moving forward; however, your team should see them as temporary trade-offs only and fix them as soon as possible, so they do not cause more issues later. - Из-за ограничений по времени или других факторов ваша команда может принять решение сознательно нарушить принципы проектирования кода, создав код с низкой связностью, тесно связанными компонентами и другими недостатками. Эти действия могут быть необходимы для дальнейшего продвижения проекта; однако ваша команда должна рассматривать их только как временные компромиссы и исправлять их как можно скорее, чтобы они не вызывали новых проблем в дальнейшем.
+- Clients with growing business constantly require new releases to roll out new features. They might also request last-minute changes, requiring your team to adjust quickly. In these circumstances, your team might make a conscious decision to create technical debt to release faster. - Клиентам с растущим бизнесом постоянно требуются новые версии для внедрения новых функций. Они также могут запросить изменения в последнюю минуту, что потребует от вашей команды быстрой адаптации. В таких обстоятельствах ваша команда может принять сознательное решение создать технический долг, чтобы быстрее выпустить продукт.
+
+### Benefits of Intentional Technical Debt
+
+When technical debt is intentionally assumed and managed, it can benefit a project in numerous ways. Just like in the financial world, assuming a small debt can help your team realize benefits far greater than the debt itself—but only if it’s calculated and there’s a plan to pay back the debt.
+
+Когда технический долг намеренно принимается на себя и управляется, это может принести пользу проекту во многих отношениях. Как и в финансовом мире, если предположить, что небольшой долг может помочь вашей команде получить гораздо большую выгоду, чем сам долг, — но только если он рассчитан и существует план по его погашению.
+
+Benefit 1. Meeting time-to-market deadline
+
+The time-to-market period covers the time to generate the idea of a product and then design, develop, and release it. Often a customer or client has strict release deadlines due to marketing events or important demos.
+
+Период вывода на рынок охватывает время, необходимое для создания идеи продукта, а затем для проектирования, разработки и выпуска продукта. Часто у заказчика или клиента есть строгие сроки выпуска из-за маркетинговых мероприятий или важных демонстраций.
+
+In this type of situation, your team has to work quickly and may need to allow for minor code flaws (that don’t disrupt a successful release) to meet the deadline. These issues then become technical debt that your team addresses after the release.
+
+В такой ситуации вашей команде приходится работать быстро и, возможно, придется допустить незначительные ошибки в коде (которые не мешают успешному выпуску), чтобы уложиться в срок. Эти проблемы затем становятся техническим долгом, который ваша команда решает после релиза.
+
+Benefit 2. Creating POCs and MVPs
+
+If your team prepares a Proof of Concept (POC) or a Minimum Viable Product (MVP) for a customer, you need to present the overall idea of how you will implement the solution. In this case, it’s okay if the code quality isn’t perfect.
+
+Если ваша команда готовит для клиента подтверждение концепции (POC) или минимально жизнеспособный продукт (MVP), вам необходимо представить общую идею того, как вы будете реализовывать решение. В этом случае ничего страшного, если качество кода не идеально.
+
+Here, going into technical debt will save time, and there is no risk of harming the business.
+
+Здесь уход в технический долг сэкономит время, и нет риска навредить бизнесу.
+
 ### Technical Debt Indicators
 
 To reduce your team’s chances of accruing unintentional technical debt, be on the lookout for indicators in each of these areas: delivery, architecture, and people.
@@ -878,7 +908,7 @@ It’s important to note that a technical debt management tool is not a substitu
 
 Visualizing technical debt is a helpful tracking strategy—it helps the team see things like the number of bugs. These uncompleted items have been moved to the backlog, and the ratio of created versus resolved cases.
 
-Визуализация технического долга — полезная стратегия отслеживания - она помогает команде видеть такие вещи, как количество ошибок. Эти незавершенные элементы были перемещены в журнал невыполненных работ, а соотношение созданных и разрешенных обращений.
+Визуализация технического долга — полезная стратегия отслеживания - она помогает команде видеть такие вещи, как количество ошибок. Незавершенные элементы размещаем в журнале невыполненных работ и мониторим соотношение созданных и разрешенных задач.
 
 Your team may already use various tools to track software development tasks and bugs. You can use these tools to monitor technical debt registries and backlogs, too. Jira and Rally are two well-known systems that are great for tracking and visualizing intentional technical debt, while SonarQube can help your team effectively track and visualize unintentional technical debt.
 
@@ -927,7 +957,7 @@ Whether you are a leader or a developer, you can follow several best practices t
 - помогут вашей команде справиться с существующей технической задолженностью
 - и снизить риски, которые может вызвать неуправляемая техническая задолженность.
 
-Также лучше всего обсудить техническую задолженность и стратегии смягчения последствий с вашим клиентом или заказчицей, чтобы предотвратить потенциальные конфликты.
+Также лучше всего обсудить техническую задолженность и стратегии смягчения последствий с вашим клиентом или заказчиком, чтобы предотвратить потенциальные конфликты.
 
 Mitigation of technical debt is everyone’s responsibility, not just those in leadership positions. Each team member can take specific steps to help reduce the impacts of technical debt.
 
