--- a/docs/engx/0. Foreword.md
+++ b/docs/engx/0. Foreword.md
@@ -49,12 +49,27 @@ tags: [EngX]
       - [WBS in Agile project management](#wbs-in-agile-project-management)
     - [Checklists](#checklists)
     - [Others planning tools](#others-planning-tools)
-  - [Cost Breakdown Structure](#cost-breakdown-structure)
-    - [Project cost estimation](#project-cost-estimation)
+  - [Project cost estimation](#project-cost-estimation)
     - [Project estimate](#project-estimate)
     - [Project сost breakdown structure (CBS)](#project-сost-breakdown-structure-cbs)
     - [Types of Project Costs](#types-of-project-costs)
-    - [Project Cost Estimation Techniques](#project-cost-estimation-techniques)
+    - [Project Estimation Checklist](#project-estimation-checklist)
+      - [Scope](#scope)
+      - [Time](#time)
+      - [Cost](#cost)
+      - [Risk](#risk)
+      - [Resource](#resource)
+      - [Quality](#quality)
+    - [Project Estimation Techniques](#project-estimation-techniques)
+      - [Top-Down Estimate](#top-down-estimate)
+      - [Bottom-Up Estimate](#bottom-up-estimate)
+      - [Analogous Estimating](#analogous-estimating)
+      - [Parametric Estimate](#parametric-estimate)
+      - [Three-Point Estimating](#three-point-estimating)
+      - [PERT](#pert)
+        - [PERT chart tools](#pert-chart-tools)
+        - [Grantt Chart Vs. PERT Chart](#grantt-chart-vs-pert-chart)
+      - [Expert Judgement](#expert-judgement)
 <!-- TOC -->
 ## Standards for systems and software engineering
 
@@ -814,9 +829,7 @@ So in this sense, a work breakdown structure is the equivalent of the product ba
 
 `Чем проще, тем лучше, но окончательный выбор делает PM (project manager).`
 
-## Cost Breakdown Structure
-
-### Project cost estimation
+## Project cost estimation
 
 Project cost estimation is the process that takes direct costs, indirect costs and other types of project costs into account and calculates a budget that meets the financial commitment necessary for a successful project. To do this, project managers and project estimators use a cost breakdown structure to determine all the costs in a project.
 
@@ -856,12 +869,154 @@ There are five main types of costs that make up your total project cost. Here’
 - Variable costs: Variable costs are costs that change due to the amount of work that’s done in the project and are variable in nature. These costs can include hourly labor wages, materials, fuel costs and so on. - Переменные затраты — это затраты, которые изменяются в зависимости от объема работы, выполненной в проекте, и носят переменный характер.
 - Sunk costs: In project cost estimating, when an investment has already been incurred and can’t be recovered it’s called a sunk cost or retrospective cost. Some examples of sunk costs include marketing, research, installation of new software, etc. - Невозвратные потери - инвестиции уже были произведены и не могут быть возмещены.
 
-### Project Cost Estimation Techniques
+### Project Estimation Checklist
 
-Estimation techniques:
+There are six main areas that should be estimated when researching or planning a project. They are
 
-- Analogous Estimating - Seek the help of experts who have experience in similar projects, or use your own historical data. If you have access to relevant historical data, try analogous estimating, which can show precedents that help define what your future costs will be in the early stages of the project.
-- Parametric Estimating - There’s statistical modeling or parametric estimating, another cost estimation method that also uses historical data of key cost drivers and then calculates what those costs would be if the duration or another of the project is changed.
-- Bottom-Up Estimating - A more granular approach is bottom-up estimating, which uses estimates of individual tasks and then adds those up to determine the overall cost of the project. This cost-estimating method is even more detailed than parametric estimating and is used in complex projects with many variables such as software development or construction projects.
-- Three-Point Estimate - Another approach is the three-point estimate, which comes up with three scenarios: most likely, optimistic and pessimistic ranges. These are then put into an equation to develop an estimation.
-- Reserve Analysis - Reserve analysis determines how much contingency reserve must be allocated. This cost estimation method tries to wrangle uncertainty.
+- scope,
+- time,
+- cost,
+- risk,
+- resource
+- and quality.
+  
+#### Scope
+
+The project scope is simply everything that must be done in the project for it to be successfully delivered. In other words, project managers need to estimate how much work is involved in order to receive the final deliverable. By doing this, including what tasks are involved, you’ll know the materials necessary to execute the project.
+
+Scope dovetails nicely with time and cost to create the triple constraint and a foundation on which any accurate project estimate techniques must be based. In fact, scope, time and cost are so interdependent that they’re key to managing a project.
+
+If, for example, a project requires more time, then either the scope or the cost will have to change. The same is true if extra costs occur. It’s like a balancing act with the project’s success being held up by these three legs. But that doesn’t mean they’re the only estimates required for estimate techniques.
+
+#### Time
+
+This refers to the overall amount of time it’ll take to complete the project and accompanying tasks. If you know how long your team will take to do their tasks, those tasks can be included to offer a fairly accurate time estimate.
+
+This is vitally important for the project manager as they begin to formulate the project plan and schedule. While project managers want to know how long a project takes and the project stakeholders certainly are interested in deadlines, there are other reasons why time is a crucial project estimate.
+
+Just as money dictates project funding, knowing how long the project will take enables the project manager to schedule the necessary resources. Coordinating resources is dependent on the timeline developed. Time also informs when the key deliverables will be received.
+
+#### Cost
+
+Cost is what most people think when they think about estimate techniques. This is understandable as most projects are discussed in dollars and cents. Projects are an investment and if you’re unable to get a return on that investment, you haven’t delivered a successful project.
+
+If you’re familiar with project management, then you know the triple constraint: cost, scope and time. These are the three main forces that impact any project. Cost is simply money; you either don’t have enough to complete the project or you spend too much and the project ends up costing far more than was predicted. Neither scenario is ideal.
+
+Accurately forecasting how much the project will cost before execution is important to your client and stakeholders. That figure often determines if they move forward with the project or not. It also helps you manage your client’s expectations about the project, so finding out how much you’ll need and when you’ll need it are critical project estimates.
+
+#### Risk
+
+Outside of the triple constraint (scope, time, cost) but no less impactful is project risk. Risk is anything that’s not expected to happen that does happen and impacts the project. Risk can be bad and is mostly thought of as a negative, but there are positive risks that can be opportunities.
+
+Whether you want to mitigate or take advantage of a risk, you need to estimate what might occur so you’re prepared. Estimate techniques for risk involve identifying what might happen and coming up with a plan to respond to it. This might not cover all bases, but it puts you in a better position to act.
+
+This is the start of a risk management plan. There will also be team members who are responsible for identifying risk, and if an issue shows up, there will be team members who own it. That means they’re responsible for tracking its progress as it’s mitigated or used to the project’s advantage.
+
+#### Resource
+
+Resources are anything you need to get the project done including your team, materials, equipment and so forth. Naturally, resources need estimation techniques, too. You don’t want to start executing a project without knowing how many subcontractors you’ll need or what software your team will be using.
+
+Resource management helps you know what you need and when you need it so there aren’t delays as teams wait for equipment when working on tasks. You also need to know who is available and when so they can be assigned work. It’s important to know who’s assigned what work to make sure to balance their allocation.
+
+It’s clear that while the triple constraint features three of the most important factors in bringing a project to a successful end, they’re not alone. Certainly, resources are critical. They might even be more difficult to estimate as they often come from a variety of vendors, suppliers and outsiders that are beyond the control of the project manager.
+
+#### Quality
+
+Finally, the project isn’t a success unless quality expectations are met. You can deliver the project on time and even under budget, but without meeting the demands set by your client’s customers or stakeholders, that’s a failed project.
+
+Quality is delivering on certain regulations or expectations, depending on the project. There might be environmental restrictions or the product has to work as advertised. Whatever the quality constraints, they can lead to more time and money poured into the project.
+
+Making an accurate estimate of what quality level is expected informs the other five estimates above. In a sense, all six of these project estimates are related or, at least, interconnected. Whatever quality estimates you come up with are sure to impact your cost and time, possible scope, risk and resources, too.
+
+### Project Estimation Techniques
+
+#### Top-Down Estimate
+
+Top-down estimates are an estimation technique that starts with an overall time for the project and then breaks that down into phases, which are then broken down further into tasks. This is a classic estimation technique that uses a look such as the work breakdown structure (WBS).
+
+Нисходящая оценка — это метод оценки, который начинается с разбиения проекта на этапы, а затем - на задачи. Это классический метод оценки, который использует подход структурной декомпозиции работ (WBS).
+
+This is commonly used when a client demands that the project be completed within a certain timeframe. This project estimate technique works well for this scenario as you have a block of time and can split it into activities to meet the deadline.
+
+Техника обычно используется, когда клиент требует, чтобы проект был завершен в течение определенного периода времени. Этот метод оценки проекта хорошо подходит для этого сценария, поскольку у вас есть отрезок времени, и вы можете разделить его на действия, чтобы уложиться в срок.
+
+#### Bottom-Up Estimate
+
+This is the reverse of the above estimate technique. Instead of breaking up the timeline into tasks, you estimate each task and combine them into an estimate for the whole project.
+
+Это обратный метод оценки, описанный выше. Вместо того, чтобы разбивать временную шкалу на задачи, вы оцениваете каждую задачу и объединяете их в оценку всего проекта.
+
+#### Analogous Estimating
+
+Analogous estimating is a technique in which the project manager looks at a previous, similar project and studies its variables to come up with an estimate for the time and cost of the current project. This comparison works best when there’s more data that leads to more accuracy.
+
+Оценка по аналогии — это метод, при котором руководитель проекта смотрит на предыдущий аналогичный проект и изучает его переменные, чтобы получить оценку времени и стоимости текущего проекта. Это сравнение работает лучше всего, когда имеется больше данных, что приводит к большей точности.
+
+This is a top-down estimating technique as the project manager is first estimating the project’s costs and then breaking it down into smaller parts. It’s helpful to use this estimation technique when you have limited estimation resources.
+
+Это метод оценки «сверху вниз», поскольку руководитель проекта сначала оценивает стоимость проекта, а затем разбивает ее на более мелкие части. Этот метод оценки полезно использовать, когда у вас ограниченные ресурсы оценки.
+
+#### Parametric Estimate
+
+This is another estimation technique that takes advantage of past project data. In this estimation technique, there are attempts to adjust the data to reflect the differences between the past project and the new one you’re estimating.
+
+Это еще один метод оценки, в котором используются данные прошлых проектов. В этом методе оценки предпринимаются попытки скорректировать данные, чтобы отразить различия между прошлым проектом и новым проектом, который вы оцениваете.
+
+By taking the details from a previous project and pro-rating it, the project manager can estimate the current project more accurately. This is sometimes referred to as parametric modeling.
+
+Взяв детали предыдущего проекта и проранжировав их пропорционально, руководитель проекта может более точно оценить текущий проект. Иногда это называют параметрическим моделированием.
+
+#### Three-Point Estimating
+
+Often when estimating from the bottom up, three-point estimating will be used. In this case, instead of estimating the duration of a single task, three estimates are applied. One is the optimistic estimate, the other is a pessimistic one, and, finally, the most likely guess. The average of these will be used as the actual estimate.
+
+Часто при оценке снизу вверх будет использоваться трехбалльная оценка. В этом случае вместо оценки продолжительности одной задачи применяются три оценки:
+
+- оптимистическая оценка,
+- пессимистическая
+- и наиболее вероятное предположение.
+
+Среднее из них будет использоваться в качестве фактической оценки.
+
+You might be familiar with three-point estimating if you’ve ever used the program, evaluation and review technique (PERT). It, too, uses what’s called a weighted average as an estimating technique to forecast more accurately.
+
+#### PERT
+
+A PERT chart is a network diagram that allows project managers to create project schedules. They’re used in the Program Evaluation Review Technique (PERT) to represent a project timeline, estimate the duration of tasks, identify task dependencies and find the critical path of a project.
+
+Диаграмма PERT — это сетевая диаграмма, которая позволяет менеджерам проектов создавать расписания проектов. Диаграмма используется в методе анализа оценки программ (PERT) для представления временной шкалы проекта, оценки продолжительности задач, определения зависимостей задач и поиска критического пути проекта.
+
+PERT charts are used by project managers to create realistic schedules by coordinating tasks and estimating their duration by assigning three time estimates for each; optimistic, most likely and pessimistic. This makes PERT charts useful when planning projects where the duration of activities is uncertain.
+
+![PERT chart](<../../assets/images/pert chart.png>)
+
+##### PERT chart tools
+
+Tools:
+
+- miro [PERT Diagram Template](https://miro.com/templates/pert-diagram/)
+- lucidchart [PERT chart generator](https://www.lucidchart.com/pages/examples/pert-chart-generator)
+- visme [PERT Chart Generator for Simplified Project Management](https://www.visme.co/pert-chart-generator/)
+- smartdraw [PERT Chart Software](https://www.smartdraw.com/software/pert-chart-software.htm)
+
+##### Grantt Chart Vs. PERT Chart
+
+A PERT chart is similar to a Gantt chart; however, the two are different in their approach and visual representation.
+
+Both charts help you with the same issue — structuring your project to track progress and follow timelines. Both ensure the team is on the same page while carrying out a project.
+
+The significant difference between these tools is their visual representation. A PERT chart is a flow chart created as a diagram that includes nodes and arrows to represent tasks. On the other hand, the Gantt chart is a horizontal bar chart illustrating tasks and timelines on one sheet.
+
+Существенная разница между этими инструментами заключается в их визуальном представлении. Диаграмма PERT — это блок-схема, созданная в виде диаграммы, которая включает узлы и стрелки для обозначения задач. Диаграмма Ганта представляет собой горизонтальную гистограмму, иллюстрирующую задачи и сроки на одном листе:
+
+- A PERT chart displays the critical path, whereas a Gantt chart displays the phases of a project. - Диаграмма PERT отображает критический путь, тогда как диаграмма Ганта отображает этапы проекта.
+- While a PERT chart elaborates on the timelines once the tasks have been defined, a Gantt chart focuses on tracking the status and revising the tasks later. It also allows the team to divide tasks into smaller segments during the project. - В то время как диаграмма PERT подробно описывает сроки после определения задач, диаграмма Ганта фокусируется на отслеживании статуса и позднем пересмотре задач. Это также позволяет команде разделять задачи на более мелкие сегменты в ходе проекта.
+- Initially, the Gantt chart did not have dependencies. They are part of the newer versions. At the same time, dependencies are a crucial element of a PERT chart. - Изначально диаграмма Ганта не имела зависимостей. Они являются частью более новых версий. В то же время зависимости являются важнейшим элементом диаграммы PERT.
+- Another significant difference is that a PERT chart is created in the planning stages, where the team sits together to discuss the project. A Gantt chart is used when the project is being executed. - Еще одно существенное отличие заключается в том, что диаграмма PERT создается на этапах планирования, когда команда собирается вместе для обсуждения проекта. Диаграмма Ганта используется при выполнении проекта.
+- Apart from these, the differences lie in both charts’ structure and visuals. - Помимо этого, различия заключаются в структуре и визуальном изображении диаграмм.
+
+#### Expert Judgement
+
+Seeking the help of experts or those with experience managing the type of project is by far the most common estimating technique. It’s certainly faster and easier than making calculations. People tend to trust others who have gone through a similar experience.
+
+It’s a flexible estimating technique in that you can use it for top-down or bottom-up estimating. In some cases, experts and experiences don’t align with your current project. Experts can still be helpful, but their opinions should be tempered by other estimating techniques.
